feat: 集成图灵机器人

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 HUBOT_BEARYCHAT_TOKENS=ef645cafe5283887244308891ceaabfe
 JENKINS_URL=http://jenkins.demo.wkwfyf.com
+TURING_API_KEY=eaeb291e4cf444959f0079263ad77ec6
+TURING_USER_ID=322839
