--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Seaborn Lee <seabornlee.cn@gmail.com>",
   "description": "A simple helpful robot for your Company",
   "scripts": {
-    "start": "export $(cat .env | xargs) && ./bin/hubot -a bearychat"
+    "start": "export $(cat .env | xargs) && ./bin/hubot -a bearychat",
+    "dev": "export $(cat .env.dev | xargs) && ./bin/hubot -a bearychat"
   },
   "dependencies": {
     "hubot": "^3.1.1",
