refactor: 抽取常量到配置文件

--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,6 @@
 HUBOT_BEARYCHAT_TOKENS=c62bf4de84ee238c084d9dd71c0c8753
 JENKINS_URL=http://jenkins.demo.wkwfyf.com
+BOT_NAME=myhubot
+TURING_API_URL=http://openapi.tuling123.com/openapi/api/v2
 TURING_API_KEY=eaeb291e4cf444959f0079263ad77ec6
 TURING_USER_ID=322839
