--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 HUBOT_BEARYCHAT_TOKENS=ef645cafe5283887244308891ceaabfe
 JENKINS_URL=http://jenkins.demo.wkwfyf.com
+BOT_NAME=myhubot
+TURING_API_URL=http://openapi.tuling123.com/openapi/api/v2
 TURING_API_KEY=eaeb291e4cf444959f0079263ad77ec6
 TURING_USER_ID=322839
