feat: 查询库位的编号

--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ BOT_NAME=myhubot
 TURING_API_URL=http://openapi.tuling123.com/openapi/api/v2
 TURING_API_KEY=eaeb291e4cf444959f0079263ad77ec6
 TURING_USER_ID=322839
+
+BASE_URL=https://saas.demo.wkwfyf.com
+LOGIN_URL=/auc/user/login
+WAREHOUSE_BIN_URL=/rfid/warehouse-bins?bin_no=
+USERNAME=17345041219
+PASSWORD=111111
